@@ -214,6 +214,11 @@
                         <configuration>
                             <argLine>
                                 --add-opens java.base/java.util=ALL-UNNAMED
+                                --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
+                                --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                                --add-opens=java.base/java.io=ALL-UNNAMED
+                                --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
                             </argLine>
                             <trimStackTrace>false</trimStackTrace>
                             <useSystemClassLoader>false</useSystemClassLoader>
